--- a/res/styles/style.css
+++ b/res/styles/style.css
@@ -62,6 +62,9 @@ nav {
     font-weight: 500;
     text-transform: uppercase; }
 
+main {
+  padding-top: 4em; }
+
 /* CUSTOMIZE THE CAROUSEL
 -------------------------------------------------- */
 /* Carousel base class */
@@ -122,5 +125,26 @@ nav {
     background-color: #0D47A1; }
   #sign-up a {
     font-size: .9em; }
+
+.interest {
+  display: block;
+  border: 0;
+  border-radius: .5em;
+  position: relative;
+  background: url(../images/signup-food.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  width: 80%;
+  height: 120px; }
+  .interest::after {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    opacity: 1; }
 
 /*# sourceMappingURL=style.css.map */
