--- a/res/styles/_layout.scss
+++ b/res/styles/_layout.scss
@@ -14,6 +14,14 @@ nav {
 		font-size: 1.3em;
 		font-weight: 500;
 		text-transform: uppercase;
+
+		&:link, &:active {
+			text-decoration: none;
+		}
+
+		&:hover, &:active {
+			color: $white;
+		}
 	}
 }
 
