--- a/res/styles/pages/_signup.scss
+++ b/res/styles/pages/_signup.scss
@@ -1,23 +1,16 @@
-.interest {
-	display: block;
-	border: 0;
-	border-radius: .5em;
-	position: relative;
-	background: url(../images/signup-food.png);
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-position: center center;
-	width: 80%;
-	// formula for width is (height * 1580)/600 b/c img is 1580px by 600px
-	height: 120px;
+.interests {
+	max-width: 600px;
+	width: 50%;
+	overflow: hidden;
 
-	// create an image background w/ set opacity
-	&::after {
-		content: "";
-		
-		position: absolute;
-		z-index: -1;
-		top: 0; bottom: 0; left: 0; right: 0;
-		opacity: 1;
+	option {
+		padding: 2em;
+		background-color: $cyan200;
+	}
+}
+
+.switch {
+	h4 {
+		display: inline-block;
 	}
 }
