--- a/res/styles/style.css
+++ b/res/styles/style.css
@@ -61,9 +61,19 @@ nav {
     font-size: 1.3em;
     font-weight: 500;
     text-transform: uppercase; }
+    nav a:link, nav a:active {
+      text-decoration: none; }
+    nav a:hover, nav a:active {
+      color: #fff; }
 
 main {
   padding-top: 4em; }
+
+h3 {
+  font-size: 3em; }
+
+h4 {
+  font-size: 2em; }
 
 /* CUSTOMIZE THE CAROUSEL
 -------------------------------------------------- */
@@ -126,25 +136,15 @@ main {
   #sign-up a {
     font-size: .9em; }
 
-.interest {
-  display: block;
-  border: 0;
-  border-radius: .5em;
-  position: relative;
-  background: url(../images/signup-food.png);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center center;
-  width: 80%;
-  height: 120px; }
-  .interest::after {
-    content: "";
-    position: absolute;
-    z-index: -1;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    opacity: 1; }
+.interests {
+  max-width: 600px;
+  width: 50%;
+  overflow: hidden; }
+  .interests option {
+    padding: 2em;
+    background-color: #80DEEA; }
+
+.switch h4 {
+  display: inline-block; }
 
 /*# sourceMappingURL=style.css.map */
