--- a/res/styles/style.css
+++ b/res/styles/style.css
@@ -121,15 +121,47 @@ h4 {
   #sign-up a {
     font-size: .9em; }
 
-.interests {
-  max-width: 600px;
-  width: 50%;
-  overflow: hidden; }
-  .interests option {
-    padding: 2em;
-    background-color: #80DEEA; }
+.interest {
+  display: flex;
+  margin: 0 auto;
+  width: 80%;
+  border: 1px solid #F5F5F5;
+  border-radius: .5em; }
+  .interest + .interest {
+    margin-top: .4em; }
+  .interest h4 {
+    display: inline-block;
+    padding: .5em; }
+  .interest div {
+    display: inline-block;
+    margin-left: auto;
+    margin: 1.5em .6em 1.2em auto; }
+
+#interest-food:hover, #interest-food:active, #interest-food[toggled="true"] {
+  border: 1px solid #F48FB1; }
+
+#interest-entertainment:hover, #interest-entertainment:active, #interest-entertainment[toggled="true"] {
+  border: 1px solid #4DD0E1; }
+
+#interest-clothing:hover, #interest-clothing:active, #interest-clothing[toggled="true"] {
+  border: 1px solid #FFA726; }
+
+#interest-souvenirs:hover, #interest-souvenirs:active, #interest-souvenirs[toggled="true"] {
+  border: 1px solid #9CCC65; }
+
+#interest-surprise:hover, #interest-surprise:active, #interest-surprise[toggled="true"] {
+  border: 1px solid #FFEB3B; }
 
 .switch h4 {
   display: inline-block; }
+
+.card {
+  position: relative;
+  width: 80%;
+  margin: 0 auto; }
+
+#filter-interest {
+  position: relative;
+  margin-left: auto; }
 
 /*# sourceMappingURL=style.css.map */
