--- a/res/styles/coupon.css
+++ b/res/styles/coupon.css
@@ -8,7 +8,7 @@
 #map {
   margin-top: 2em;
   width: 100%;
-  height: 150px; }
+  height: 200px; }
 
 .breather-sml {
   height: 5px; }
@@ -32,5 +32,12 @@
   width: 100%;
   padding: 1em;
   font-size: 1.2em; }
+
+.shareButtons {
+  display: flex; }
+  .shareButtons .row {
+    margin-left: auto;
+    padding-top: .3em;
+    padding-right: .3em; }
 
 /*# sourceMappingURL=coupon.css.map */
