--- a/res/styles/coupon.scss
+++ b/res/styles/coupon.scss
@@ -10,7 +10,7 @@
 #map {
     margin-top: 2em;
     width: 100%;
-    height: 150px;
+    height: 200px;
 }
 
 .breather-sml{
@@ -36,4 +36,14 @@
     width: 100%;
     padding: 1em;
     font-size: 1.2em;
+}
+
+.shareButtons {
+    display: flex;    
+    
+    .row {
+        margin-left: auto;
+        padding-top: .3em;
+        padding-right: .3em;
+    }
 }
