--- a/res/styles/interests.css
+++ b/res/styles/interests.css
@@ -55,14 +55,16 @@
   z-index: 20;
   align-items: center; }
   #filter-holder h3 {
-    margin: 1em auto 0 auto;
+    position: relative;
+    margin: 0 auto;
+    width: 80%;
     border-bottom: 1px solid #EEEEEE; }
 
 #filter-modal {
   display: block;
   width: 70%;
   margin: 0 auto;
-  padding: 0 3em; }
+  padding: 2em 3em 2em 0; }
 
 .button-holder {
   display: flex;
