--- a/res/styles/signup.scss
+++ b/res/styles/signup.scss
@@ -33,10 +33,10 @@ h1 {
   margin-bottom: .6em;
 }
 
-form {
+.form-group {
   position: relative;
   display: block;
-  margin: 0 auto 5em auto;
+  margin: 0 auto;
   width: 80%;
 }
 
