--- a/res/styles/coupon.css
+++ b/res/styles/coupon.css
@@ -38,6 +38,30 @@
   .shareButtons .row {
     margin-left: auto;
     padding-top: .3em;
-    padding-right: .3em; }
+    padding-right: .6em; }
+
+.btn-twitter {
+  background: #00acee;
+  border-radius: 0;
+  color: #fff; }
+
+.btn-twitter:link, .btn-twitter:visited {
+  color: #fff; }
+
+.btn-twitter:active, .btn-twitter:hover {
+  background: #0087bd;
+  color: #fff; }
+
+.btn-facebook {
+  background: #3b5998;
+  border-radius: 0;
+  color: #fff; }
+
+.btn-facebook:link, .btn-facebook:visited {
+  color: #fff; }
+
+.btn-facebook:active, .btn-facebook:hover {
+  background: #30477a;
+  color: #fff; }
 
 /*# sourceMappingURL=coupon.css.map */
